--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev -p 8000",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "network": "next start -H 192.168.18.4"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
