--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
+    "recharts": "^2.13.3",
     "slate": "^0.110.2",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
