--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.428.0",
     "next": "14.2.5",
+    "nextjs-toploader": "^3.7.15",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
